2017-03-06 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-650

	* src/rt4.cc (run_rt4):
	Update gas absorption from initialized zeros only if there is at least
	one abs_species (determined via vmr_field extend). Also, only
	determine scattering properties if there's at least one non-zero
	pnd_field entry.

2017-03-06 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-649

	ATTENTION: Breaks backward compatability of RT4-using controlfiles.

	* src/m_rt4.cc, methods.cc, rt4.[cc,h] (RT4Init, RT4Calc,
	RT4CalcWithRT4Surface; check_rt4_input, init_ifield):
	Remove RT4Init (got too error-prone with many generic input variables
	that needed to be consistent between Init and Calc, and no real use
	here of having a separate Init WSM). Moved functionality into
	check_rt4_input and init_ifield instead.

2017-03-06 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-648

	* src/m_doit.cc, methods.cc (iyInterpCloudboxField):
	Throw error if angle interpolation order exceeds number of available
	grid points. Make extrapolfac for za angle poly-interpolation a user
	parameter, default set to 1.0 which should satisfy all of RT4's quad
	types. Check that za interpolant within given inter/extrapolation
	range and throw error otherwise.

	* src/m_rt4.cc, methods.cc, rt4.[cc,h] (RT4Init, RT4Calc,
	RT4CalcWithRT4Surface; check_rt4_input):
	Make adding of zenith/nadir as RT4 user angles optional (together with
	the extrapolation of angle grid above this should allow for
	scat_za_grids that are not bound by 0/180degs).

2017-03-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-647

	* src/m_surface.cc: Added the option ignore_surface_slope.

	(iySurfaceFastem): Adopted call of specular_losCalc.

2017-03-03 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-646

	* src/m_doit.cc, methods.cc (iyInterpLinCloudboxField,
	iyInterpCloudboxField):
	Renamed iyInterpLinCloudboxField from iyInterpCloudboxField. New