@@ -1,3 +1,11 @@
+2017-03-07 Jana Mendrok  <jana.mendrok@chalmers.se>
+
+	* arts-2-3-651
+
+	* src/m_doit.cc (iyInterpCloudboxField):
+	Fixed extrapol range check for in-cosine interpolation. Consistently
+	report angles (not cosines) in error message.
+
 2017-03-06 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-650
